JABERA-6 some methods renames and fix tests